# sgnlr

./: README.md  conftest.py  pyproject.toml
.github/workflows/: python-package.yml
src/sgnlr/: __init__.py
src/sgnlr/core/: computed.py  effect.py  scheduler.py  signal.py
src/sgnlr/utils/: __init__.py  defer.py  on.py  parent.py  reducer.py  untrack.py
tests/core/: test_computed.py  test_effects.py  test_signals.py
tests/utils/: test_defer.py  test_on.py  test_parent.py  test_untrack.py
