[project]
name = "sgnlr"
version = "0.0.0"
description = "A simple, signals-based, fine grained reactive programming library. Zero external dependencies, type safe."
authors = [
    { name = "gekkotadev", email = "114091010+GekkotaDev@users.noreply.github.com" },
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Apache-2.0" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = ["black>=23.12.1", "pytest>=7.4.4"]
